--- a/server/css/style.css
+++ b/server/css/style.css
@@ -1,16 +1,34 @@
 body, html {
 	font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial;
 	-webkit-font-smoothing: antialiased;
+	background: #fcfbfb;
+}
+
+.container {
+	width: 960px;
+}
+
+.mainLCol {
+	float: left;
+	margin-left: 20px;
+	width: 360px;
+}
+
+.mainRCol {
+	float: left;
+	margin-left: 20px;
+	width: 580px;
 }
 
 .masthead {
-	height: 345px;
-	color: white;
-	text-align: center;
-	background: url('../img/bg_texture.png');	
+	background: white;	
 	position: relative;
-	box-shadow: inset 0 -8px 25px rgba(0,0,0,.18);
+	border-bottom: 1px solid #f0efed;
 }
+
+	.masthead div.header {
+		height: 110px;
+	}
 
 	.masthead > div.conatiner {
 		position: relative;
@@ -18,15 +36,18 @@ body, html {
 
 	/* Overall */
 	#logo {
-		width: 460px;
-		height: 42px;
+		margin-top: 37px;
+		width: 370px;
+		height: 34px;
 		display: block;
 		text-indent: -9999px;
 		overflow: hidden;
 		display: inline-block;
-		background: url('../img/logo_460.png') no-repeat;
-		margin-top: 53px;
-		margin-bottom: 20px;
+		background: url('../img/logo.png') no-repeat;
+	}
+
+	div.steps {
+		border-top: 1px solid #f0efed;
 	}
 
 	/* Splash page specific */
@@ -38,71 +59,83 @@ body, html {
 		ul.steps li {
 			text-align: center;
 			display: inline-block;
-			width: 200px;
+			width: 320px;
+			height: 150px;
+			float: left;
+			border-right: 2px solid #f7f6f5;
+			margin-right: -2px;
 		}
 
+			ul.steps li:last-child {
+				margin-right: 0;
+				border: none;
+			}
+
 		ul.steps li h2 {
-			font-size: 30px;
-			line-height: 33px;
-			margin-bottom: 10px;
+			margin: 47px 0 5px 0;
+			font-size: 18px;
+			line-height: 18px;
+			color: #9c9999;
+			text-transform: uppercase;
 		}
 
 		ul.steps li p {
-			font-size: 20px;
-			margin-bottom: 20px;
-		}
-
-		ul.steps li span.step {
-			color: #263053;
-			font-size: 24px;
-			text-align: center;
-			display: inline-block;
-			padding: 10px;
-			width: 18px;
-			height: 18px;
-			font-weight: bold;
-			background: white;
-			border-radius: 100px;
+			font-size: 16px;
+			color: #a6a2a2;
+			margin: 0 80px;
+			font-family: 'Skolar';
 		}
 
 	a#signup {
-		color: rgb(41, 60, 131);
-		width: 130px;
-		margin: 0 auto 35px;
-		padding: 20px 21px 18px;
+		width: 162px;
+		height: 73px;
+		background: url('../img/download_sprite.png') 0px 0px no-repeat;
+		margin: 39px auto 39px;
 		display: block;
 		cursor: pointer;
-		font-size: 17px;
-		font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial;
-		font-weight: bold;
-		text-transform: uppercase;
-		border-radius: 70px;
-		border: 1px solid rgb(0, 11, 133);
-		border-bottom-color: rgb(3, 9, 82);
-		box-shadow: 0 2px 3px rgba(0,0,0,.33);
-		background: #f0f1f3; /* Old browsers */
-		background: -moz-linear-gradient(top,  #f0f1f3 0%, #cecfd1 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f0f1f3), color-stop(100%,#cecfd1)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  #f0f1f3 0%,#cecfd1 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  #f0f1f3 0%,#cecfd1 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  #f0f1f3 0%,#cecfd1 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  #f0f1f3 0%,#cecfd1 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f1f3', endColorstr='#cecfd1',GradientType=0 ); /* IE6-9 */
+		text-indent: -9999px;
+		overflow: hidden;
 	}		
 
-	a#signup strong {
-		font-size: 19px;
-	}
-
 	a#signup:hover {
-		background: #f0f1f3; /* Old browsers */
-		text-decoration: none;
-		box-shadow: 0 2px 3px 1px rgba(0,0,0,.18);
+		background: url('../img/download_sprite.png') 0px -73px no-repeat;
 	}
 
 	a#signup:active {
 		box-shadow: inset 0 2px 3px rgba(0,0,0,.18), 0 2px 3px 1px rgba(0,0,0,.08);
 	}
+
+	.masthead .stat {
+		float: right;
+		margin: 34px 0 0 55px;
+	}
+
+.stat-view {
+	text-align: right;
+}
+
+	.stat-view div.num {
+		color: #45b278;
+		font-size: 32px;
+		font-weight: bold;
+	}
+
+	.stat-view div {
+		font-size: 14px;
+		color: #bdbcbc;	
+		margin-bottom: 8px;
+	}
+
+.section-header {
+	border-bottom: 1px solid #f2f0f0;
+	margin-bottom: 22px;
+}
+
+.section-header h1 {
+	font-size: 18px;
+	text-transform: uppercase;
+	color: #45b278;
+}
 	
 .sub-head {
 	background: #f7f8f9;
@@ -124,6 +157,81 @@ body, html {
 	width: 620px !important;
 }
 
+ul.visits-stream-view {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.visit-view {
+	display: block;
+	position: relative;
+	margin-bottom: 18px;
+}
+
+	.visit-view .score {
+		position: absolute;
+		left: 0;
+		top: 0;
+		font-size: 12px;
+		color: #d3d3d3;
+		width: 24px;
+		text-align: right;
+		font-weight: bold;
+	}
+
+	.visit-view .visit-content {
+		padding: 0 0 0 39px;
+	}
+
+	.visit-view a.link {
+		color: #4085c6;
+		font-size: 19px;
+		font-weight: bold;
+	}
+
+	.visit-view .visit-stats {
+		font-family: 'Skolar';
+		color: #d1d1d1;
+		font-size: 15px;
+		margin-top: 5px;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	.visit-view .visit-stats ul.actions {
+		list-style: none;
+		display: inline-block;
+		margin: 0;
+		padding: 0;
+	}
+
+	.visit-view .visit-stats ul.actions li {
+		display: inline;
+	}
+
+	.visit-view .visit-stats a {
+		color: #d1d1d1;
+		margin-right: 10px;
+	}
+
+		.visit-view .visit-stats a.domain-link {
+			margin-right: 0;
+		}
+
+		.visit-view .visit-stats a:hover {
+			color: #93afcb;
+			text-decoration: none;
+		}
+
+	.visit-view i {
+		opacity: .15;
+		margin-right: 2px;
+	}
+
+
+/*
 ul.visits-stream-view {
 	list-style: none;
 	margin: 0;
@@ -155,4 +263,4 @@ ul.visits-stream-view {
 
 		ul.visits-stream-view li a img {
 			max-height: 200px;
-		}
+		}*/
