User info shared across app and extension through cookie. User number originates only from extension socket connections

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -5,6 +5,7 @@ html(lang="en")
 		meta(name="description", content="Stream your browsing anonymously to start chats.")
 		link(rel="stylesheet", type="text/css", href="/css/all.css")
 		script(type="text/javascript", src="/js/jquery.js")
+		script(type="text/javascript", src="/js/jquery-cookie.js")
 		script(type="text/javascript", src="/js/underscore.js")
 		script(type="text/javascript", src="/js/backbone.js")
 		script(type="text/javascript", src="/socket.io/socket.io.js")
