--- a/server/css/style.css
+++ b/server/css/style.css
@@ -189,17 +189,26 @@ ul.visits-stream-view {
 
 	.visit-view .score {
 		position: absolute;
-		left: 0;
+		left: -5px;
 		top: 0;
 		font-size: 12px;
 		color: #d3d3d3;
-		width: 24px;
+		width: 35px;
+		padding-right: 5px;
+		height: 40px;
+		border-radius: 3px;
+		overflow: hidden;
 		text-align: right;
 		font-weight: bold;
 	}
 
+	.visit-view .score.has-image {
+		color: white;
+		text-shadow: 0 1px 2px rgba(0,0,0,.4);
+	}
+
 	.visit-view .visit-content {
-		padding: 0 0 0 39px;
+		padding: 0 0 0 47px;
 	}
 
 	.visit-view a.link {
