--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -77,7 +77,9 @@ html(lang="en")
 			div.content
 
 		script(type="text/template", id="visitView-template")
-			<span class="score"><%= model.get('visitsPerLink') %></span>
+			<span class="score <% if (model.get('image')) { %>has-image<% } %>" <% if (model.get('image')) { %>style="background: url('<%= model.get('image').src %>'); background-size: <%= imageSettings.width %>px <%= imageSettings.height %>px; background-position: <%= imageSettings.top %>px <%= imageSettings.left %>px;"<% } %>>
+			<%= model.get('visitsPerLink') %>
+			</span>
 
 			<div class="visit-content">
 
