--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -85,7 +85,7 @@ html(lang="en")
 
 		script(type="text/template", id="visitView-template")
 			<span class="score <% if (model.get('image')) { %>has-image<% } %>" <% if (model.get('image')) { %>style="background: url('<%= model.get('image').src %>'); background-size: <%= imageSettings.width %>px <%= imageSettings.height %>px; background-position: <%= imageSettings.top %>px <%= imageSettings.left %>px;"<% } %>>
-			<%= model.get('visitsPerLink') %>
+			<span class="score-num"><%= model.get('visitsPerLink') %></span>
 			</span>
 
 			<div class="visit-content">
